--- a/src/execution_algorithms/ltfb/CMakeLists.txt
+++ b/src/execution_algorithms/ltfb/CMakeLists.txt
@@ -2,6 +2,7 @@
 set_full_path(THIS_DIR_SOURCES
   checkpoint_binary.cpp
   checkpoint_file.cpp
+  checkpoint_file_dyad.cpp
   meta_learning_strategy.cpp
   random_pairwise_exchange.cpp
   sendrecv_weights.cpp
